feat: add chart analysis (#28)
* chore: increment json

* feat: cuid => cuid2

* chore: increment version

* feat: add recharts

* yeet

* svg

* yeet

* feat: add pie chart

* update paths

* convert pagination to tsx

* h

* vite is fun

* use backpack

* this probably not needed

* yeet

* should work because i told it too

* yup

* update about

* update about

* feat: add charts

* update navigation

* fix: nav

* fix: navigation

* duh

* fix: nav

* fix: the nav yay

* update charts

* feat: analysis

* oops

* damnit

* 8ue//

* u

* last one

* u

* :3

* test

* maybe

* maybe

* o

* b

* maybe

* u

* ybe felecia

* maybe

* lol

* my bad

* maybe

* eu

* b

* fix: udpate

* add analytics

* add analytics

* yeet

* style: fixing user admin to id-trials

* feat: pie chart :3

* fix: I'm fucking smart

* feat: update analytics

* feat: add stacked bar chart

* feat: userids are generated by context removed gray omg

* chore: cmd => generate

* feat: push analysis page

* feat: updated swagger

* feat: update usertable

* feat: time series

* chore: removed gorm

* claude cooked

* chore: remove heatmap

* hehe :3

* chore: remove gray

* test: I fixed a test

* better analytics

* chore: analysis => dashboard

* fix: my dashboard works now

* fix: percentiles work

* fix: show timeseries

* feat: change how percentiles work

* feat: add line to dashboard

* feat: we're so close

* feat: add boxplot we're legit almost done

* feat: fully working dashboard

* a
